[gd_scene load_steps=4 format=2]

[ext_resource path="res://MenuBar.gd" type="Script" id=1]
[ext_resource path="res://FileMenuButton.gd" type="Script" id=2]
[ext_resource path="res://EditMenuButton.gd" type="Script" id=3]

[node name="MenuBar" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="FileMenuButton" type="MenuButton" parent="."]
margin_right = 35.0
margin_bottom = 600.0
text = "File"
switch_on_hover = true
script = ExtResource( 2 )

[node name="EditMenuButton" type="MenuButton" parent="."]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 600.0
text = "Edit"
switch_on_hover = true
script = ExtResource( 3 )
[connection signal="file_new" from="FileMenuButton" to="." method="_on_FileMenuButton_file_new"]
[connection signal="file_open" from="FileMenuButton" to="." method="_on_FileMenuButton_file_open"]
[connection signal="file_quit" from="FileMenuButton" to="." method="_on_FileMenuButton_file_quit"]
[connection signal="file_save" from="FileMenuButton" to="." method="_on_FileMenuButton_file_save"]
[connection signal="edit_copy" from="EditMenuButton" to="." method="_on_EditMenuButton_edit_copy"]
[connection signal="edit_cut" from="EditMenuButton" to="." method="_on_EditMenuButton_edit_cut"]
[connection signal="edit_paste" from="EditMenuButton" to="." method="_on_EditMenuButton_edit_paste"]
[connection signal="edit_redo" from="EditMenuButton" to="." method="_on_EditMenuButton_edit_redo"]
[connection signal="edit_undo" from="EditMenuButton" to="." method="_on_EditMenuButton_edit_undo"]
